# psql_connector

./: LICENSE  README.md  pyproject.toml
psql_connector/: __init__.py  pg_connector.py
